02-platforms/00-vcluster/vcluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: aiitw
spec:
  ingressClassName: nginx 
  rules:
  - host: vcluster-demo.X.X.X.X.myip.cloud.infn.it 
    http:
      paths:
      - backend:
          service:
            name: aiitw
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
